# rill

./: .gitignore  .watchmanconfig  CHANGE.md  CHANGELOG.zh.md  README.md  README.zh.md  RillSandboxNative.podspec  UNKNOWN_POLICY.md  biome.json  bunfig.toml  package-lock.json  package.json  react-native.config.js  rust-toolchain.toml  tsconfig.json
.github/: CONTRIBUTING.md  CONTRIBUTING.zh.md  SECURITY.md
.github/workflows/: benchmarks.yml  ci.yml
android/: CMakeLists.txt  build.gradle
android/src/main/java/com/rill/sandbox/: RillSandboxNativeModule.java  RillSandboxNativePackage.java
android/src/main/jni/: RillSandboxAndroid.cpp
contracts/: canvas-wire.CONFORMANCE.md  canvas-wire.DESIGN.md  canvas-wire.golden.json  canvas-wire.json  graphics-seams.json  op-batch-wire.CONFORMANCE.md  op-batch-wire.MATURITY.md  op-batch-wire.golden.json  op-batch-wire.json  op-batch-wire.matrix.json  store-net-bytes.CONFORMANCE.md  store-net-bytes.DESIGN.md  store-net-bytes.golden.json  store-net-bytes.json
crates/: Cargo.toml  build.sh
crates/asset-guest/: Cargo.toml
crates/asset-guest/src/: lib.rs
crates/canvas-binary-guest/: Cargo.toml
crates/canvas-binary-guest/src/: lib.rs
crates/canvas-escape-guest/: Cargo.toml
crates/canvas-escape-guest/src/: lib.rs
crates/canvas-gpu-guest/: Cargo.toml
crates/canvas-gpu-guest/src/: lib.rs
crates/canvas-guest/: Cargo.toml
crates/canvas-guest/src/: lib.rs
crates/canvas-present-guest/: Cargo.toml
crates/canvas-present-guest/src/: lib.rs
crates/event-guest/: Cargo.toml
crates/event-guest/src/: lib.rs
crates/heap-churn-guest/: Cargo.toml
crates/heap-churn-guest/src/: lib.rs
crates/heap-exhaust-guest/: Cargo.toml
crates/heap-exhaust-guest/src/: lib.rs
crates/kv-guest/: Cargo.toml
crates/kv-guest/src/: lib.rs
crates/rill-guest/: Cargo.toml  build.rs
crates/rill-guest/src/: canvas_encode.rs  conformance.rs  lib.rs  mini_json.rs  store_net_encode.rs  store_net_encode_tests.rs  store_net_wrappers_tests.rs  wire_encode.rs
crates/seq-guest/: Cargo.toml
crates/seq-guest/src/: lib.rs
crates/ui-binary-guest/: Cargo.toml
crates/ui-binary-guest/src/: lib.rs
crates/ui-guest/: Cargo.toml
crates/ui-guest/src/: lib.rs
docs/: README.md  README.zh.md  cdp-debugger-test-manual.zh.md  native-guest-debugging.zh.md  native-guest-deferred.zh.md  native-guest.zh.md  roadmap.zh.md
docs/api/: README.md  README.zh.md  guest.md  guest.zh.md  host.md  host.zh.md  orchestrator.md  orchestrator.zh.md  tenant-manager.md  tenant-manager.zh.md
docs/architecture/: README.md  README.zh.md  binary-protocol.md  binary-protocol.zh.md  bridge-serialization.md  bridge-serialization.zh.md  cdp-debugging.md  cdp-debugging.zh.md  event-bus.md  event-bus.zh.md  guest-host-interaction.md  guest-host-interaction.zh.md  guest-runtime.md  guest-runtime.zh.md  native-orchestrator.md  native-orchestrator.zh.md  native-tenant-manager.md  native-tenant-manager.zh.md  security.md  security.zh.md
docs/getting-started/: README.md  README.zh.md  guest-development.md  guest-development.zh.md  host-integration.md  host-integration.zh.md
docs/guides/: cli.md  cli.zh.md  host-module-types.md  host-module-types.zh.md  multi-tenant.md  multi-tenant.zh.md  native-integration.md  native-integration.zh.md  production.md  production.zh.md  sandbox-providers.md  sandbox-providers.zh.md
docs/reference/: sandbox-comparison.md  sandbox-comparison.zh.md
examples/: README.md
examples/android-demo/: .gitignore  App.tsx  README.md  app.json  index.tsx  install.sh  metro.config.js  package.json  run-e2e.sh
examples/android-demo/android/: autolinking.json  gradle.properties  settings.gradle
examples/android-demo/android/app/src/main/jni/: CMakeLists.txt  RillPerformanceBridge.cpp
examples/ios-demo/: .gitignore  Podfile  README.md  install.sh  metro.config.js  package.json  run-e2e.sh
examples/macos-demo/: README.md
examples/windows-demo/: .gitignore  README.md  activate.ps1  dev.cmd  index.js  install.ps1  metro.config.js  package-lock.json  package.json
examples/windows-demo/windows/RillSandboxNative/: CMakeLists.txt  RillSandboxNativeModule.cpp  RillSandboxNativeModule.h  pch.h  quickjs-win32-compat.h
examples/windows-demo/windows/RillSandboxNative/msvc-shims/: pthread.h
examples/windows-demo/windows/RillSandboxNative/msvc-shims/sys/: time.h
native/core/: Makefile  run-tests.sh
native/quickjs/: .gitignore  CMakeLists.txt  CMakeLists.wasm.cmake  CMakeLists.wasm.txt  build-wasm-cdp.sh  build-wasm-debug.sh  build-wasm.sh  run-tests.sh
scripts/: check-apple-build.sh  check-unknown.ts  fuzz-wire-differential.sh  rill_post_install.rb  rill_postinstall.js  run-all-tests.sh  run-unit-tests.sh  wire-decoder-fuzz-differential.ts
sdk/c/: build.sh  example-guest.c  rill_guest.h
src/: index.ts
src/__mocks__/: react-native.ts
src/cli/: bin.ts  build.analyze.integration.test.ts  build.errors.test.ts  build.hermes-compat.test.ts  build.host-modules.test.ts  build.strict.guard.test.ts  build.test.ts  build.ts  index.test.ts  index.ts  init.test.ts  oxc-adapter.js  oxc-adapter.test.ts  oxc-adapter.ts
src/contract/: binary.test.ts  index.test.ts  index.ts
src/guest/: bundle.ts
src/host/: Engine.ts  engine-view.test.ts  engine-view.test.tsx  index.ts  types.ts  use-engine-view.ts
src/sdk/: index.ts  sdk.ts  types.ts
src/shared/: callback-registry.ts  events.ts  index.ts  keyboard.ts  serialization.ts  style-types.ts  type-rules.complex.test.ts  type-rules.ts  types.ts
src/types/: runtime-globals.d.ts
tests/cdp-debug/: cdp-debug-page.html  cdp-debug-page.ts  cdp-debug-worker.ts  cdp-debug.e2e.ts  playwright.config.ts  run-tests.sh  run.ts
tests/e2e-wasm-sandbox/: playwright.config.ts  run.ts
tests/guest-bundle/: package.json  run-tests.sh  verify-host-modules.ts  verify.ts
tests/rn-macos-bridgeless/: App.tsx  index.js  metro.config.js  package.json  run-tests.sh  tsconfig.json
tests/wasm-sandbox/: engine-harness.ts  engine-test.html  engine.e2e.ts  index.html  playwright.config.ts  run-tests.sh  run.ts
(+433 files in other folders)
