# Rust guest SDK workspace for rill's native (non-JS) WASM guests.
# See docs/native-guest.zh.md. Build with crates/build.sh (needs the
# wasm32-unknown-unknown target).
[workspace]
resolver = "2"
members = ["rill-guest", "kv-guest", "ui-guest", "seq-guest", "event-guest", "heap-churn-guest", "canvas-guest", "canvas-binary-guest", "canvas-present-guest", "canvas-gpu-guest", "canvas-escape-guest", "asset-guest"]

# Shared package metadata: members inherit via `<field>.workspace = true` so
# version / edition / license live in ONE place. Every member is internal SDK /
# test-fixture tooling, never published — hence `publish = false` on each.
[workspace.package]
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
