[package]
name = "asset-guest"
version.workspace = true
edition.workspace = true
description = "Demo native rill guest that resolves an app-package asset to decoded RGBA in its own linear memory via host:asset.info + host:asset.blit (the ④ pixera path)."
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
rill-guest = { path = "../rill-guest" }
