[package]
name = "canvas-binary-guest"
version.workspace = true
edition.workspace = true
description = "Test-fixture native rill guest that emits a canvas frame over the WIP binary wire when the host advertises support (else JSON)."
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# Enable the WIP binary canvas wire in the SDK. This crate is built by build.sh
# in its OWN cargo invocation (separate feature resolve) so this feature never
# unifies into the default JSON fixtures.
rill-guest = { path = "../rill-guest", features = ["wip-binary-protocol"] }
