[package]
name = "canvas-escape-guest"
version = "0.0.0"
edition = "2021"
description = "Native rill guest that draws with special-character strings to prove the canvas SDK's guest->host JSON escaping round-trips."
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
rill-guest = { path = "../rill-guest" }
