[package]
name = "canvas-escape-guest"
version.workspace = true
edition.workspace = true
description = "Native rill guest that draws with special-character strings to prove the canvas SDK's guest->host JSON escaping round-trips."
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
rill-guest = { path = "../rill-guest" }
