[package]
name = "canvas-gpu-guest"
version.workspace = true
edition.workspace = true
description = "Demo native rill guest for the stage ③-a host-mediated GPU path: configures a <Canvas> for webgpu (webgl2 fallback), uploads a vertex buffer, and submits a validated command buffer that draws a triangle with a host-preset pipeline each frame (no guest shaders, no readback, within the per-submit cost budget)."
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
rill-guest = { path = "../rill-guest" }
