[package]
name = "canvas-guest"
version.workspace = true
edition.workspace = true
description = "Demo native rill guest that draws a recognizable 2D scene via the rill-guest canvas::draw display list."
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
rill-guest = { path = "../rill-guest" }
