[package]
name = "event-guest"
version.workspace = true
edition.workspace = true
description = "Demo native rill guest that receives host->guest events via rill_on_event."
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
rill-guest = { path = "../rill-guest" }
