[package]
name = "heap-exhaust-guest"
version.workspace = true
edition.workspace = true
description = "Adversarial native rill guest that exhausts its bump heap to test host resilience."
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
rill-guest = { path = "../rill-guest" }
