[package]
name = "rill-guest"
version.workspace = true
edition.workspace = true
description = "Ergonomic Rust SDK for writing rill native (non-JS) WASM guests — wraps the linear-memory host:* ABI so guests write store::put(k, v).await."
license.workspace = true
publish = false

[lib]
crate-type = ["rlib"]
