[package]
name = "rill-guest"
version.workspace = true
edition.workspace = true
description = "Ergonomic Rust SDK for writing rill native (non-JS) WASM guests — wraps the linear-memory host:* ABI so guests write store::put(k, v).await."
license.workspace = true
publish = false

[lib]
crate-type = ["rlib"]

[features]
# WORK IN PROGRESS, DEFAULT OFF: the guest-side encoder for the binary op-batch
# wire protocol (contracts/op-batch-wire.json). Gated so nothing of it compiles
# into the shipped guest until the protocol is wired into the live emit path.
wip-binary-protocol = []
