[package]
name = "rill-guest"
version.workspace = true
edition.workspace = true
description = "Ergonomic Rust SDK for writing rill native (non-JS) WASM guests — wraps the linear-memory host:* ABI so guests write store::put(k, v).await."
license.workspace = true
publish = false

[lib]
crate-type = ["rlib"]

[features]
# WORK IN PROGRESS, DEFAULT OFF: the guest-side encoder for the binary op-batch
# wire protocol (contracts/op-batch-wire.json). Gated so nothing of it compiles
# into the shipped guest until the protocol is wired into the live emit path.
wip-binary-protocol = []

# talc: the guest's global allocator. no_std, no default features (pure
# core/alloc). On wasm the guest wires `talc::wasm::WasmDynamicTalc`, a
# memory.grow-backed growable heap that REUSES freed memory (real free list),
# so the heap grows to fit the working set then plateaus — replacing the old
# only-grows bump allocator.
[dependencies]
talc = { version = "5.0.4", default-features = false }
