[package]
name = "seq-guest"
version.workspace = true
edition.workspace = true
description = "Demo native rill guest exercising two sequential host awaits (put then get) and JSON escaping."
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
rill-guest = { path = "../rill-guest" }
